<resources>
    <string name="app_name">ExapptionDemo</string>
    <string name="action_settings">Settings</string>
    <string name="gcm_appid">333962648599</string>
    <string name="enable_pn">Enable Push Notifications</string>
    <string name="exapption_demo">Exapption Demo</string>
    <string name="label_pause">Pause Push Notifications</string>
    <string name="label_resume">Resume Push Notifications</string>
    <string name="label_crash">Test Crash</string>
    <string name="btn_lbl_crash">Crash</string>
</resources>
